added upload link to homepage

--- a/fileserver/templates/index.html
+++ b/fileserver/templates/index.html
@@ -47,6 +47,13 @@ data-admin-utc-offset="0">
                         <td></td>
                         <td></td>
                     </tr>
+                    
+                    <tr class="upload-module">
+                    	<th scope="row"><a href="/upload/" class="section" title="Upload Module" style="color: #333">File Upload</a></th>
+                    	<td></td>
+                        <td></td>
+                    </tr>
+                        
 
                     <!-- <tr class="model-user">
                         <th scope="row"></th>
