link to admin paged put in a better place

--- a/fileserver/templates/index.html
+++ b/fileserver/templates/index.html
@@ -40,10 +40,12 @@ data-admin-utc-offset="0">
             <div class="app-auth module">
                 <table>
                     <caption>
-                        <a href="/admin/auth/" class="section" title="Models in the Authentication and Authorization application">Part 1</a>
+                        Part 1
                     </caption>
                     <tr class="model-group">
-                        <th scope="row">HTTP/Rest File Server</th>
+                        <th scope="row">
+                        	<a href="/admin/auth/" class="section" title="Models in the Authentication and Authorization application">HTTP/Rest File Server Admin</a>
+                       	</th>
                         <td></td>
                         <td></td>
                     </tr>
