text color changed so it is visible

--- a/fileserver/templates/index.html
+++ b/fileserver/templates/index.html
@@ -44,7 +44,7 @@ data-admin-utc-offset="0">
                     </caption>
                     <tr class="model-group">
                         <th scope="row">
-                        	<a href="/admin/auth/" class="section" title="Models in the Authentication and Authorization application">HTTP/Rest File Server Admin</a>
+                        	<a href="/admin/auth/" class="section" title="Models in the Authentication and Authorization application" style="color: #333">HTTP/Rest File Server Admin</a>
                        	</th>
                         <td></td>
                         <td></td>
